[PLAT-13853] Move upgrade tests to new schema (part 2)
Summary: Modified several upgrade tests to fit into new test schema.

Test Plan: sbt test

Reviewers: nsingh, cwang

Reviewed By: cwang

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D34827