@@ -2,9 +2,6 @@
 
 package com.yugabyte.yw.commissioner.tasks.upgrade;
 
-import static com.yugabyte.yw.commissioner.UserTaskDetails.SubTaskGroupType.DownloadingSoftware;
-import static com.yugabyte.yw.commissioner.tasks.UniverseTaskBase.ServerType.MASTER;
-import static com.yugabyte.yw.commissioner.tasks.UniverseTaskBase.ServerType.TSERVER;
 import static com.yugabyte.yw.models.TaskInfo.State.Success;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
@@ -20,11 +17,9 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.net.HostAndPort;
-import com.yugabyte.yw.commissioner.UserTaskDetails;
-import com.yugabyte.yw.commissioner.tasks.UniverseTaskBase.ServerType;
-import com.yugabyte.yw.commissioner.tasks.params.NodeTaskParams;
+import com.yugabyte.yw.commissioner.MockUpgrade;
+import com.yugabyte.yw.commissioner.UpgradeTaskBase;
 import com.yugabyte.yw.commissioner.tasks.subtasks.RunYsqlUpgrade;
 import com.yugabyte.yw.common.ApiUtils;
 import com.yugabyte.yw.common.ModelFactory;
@@ -35,6 +30,7 @@ import com.yugabyte.yw.common.TestUtils;
 import com.yugabyte.yw.common.Util;
 import com.yugabyte.yw.forms.SoftwareUpgradeParams;
 import com.yugabyte.yw.forms.UniverseDefinitionTaskParams;
+import com.yugabyte.yw.forms.UpgradeTaskParams;
 import com.yugabyte.yw.forms.UpgradeTaskParams.UpgradeOption;
 import com.yugabyte.yw.models.AvailabilityZone;
 import com.yugabyte.yw.models.CustomerTask;
@@ -47,10 +43,8 @@ import com.yugabyte.yw.models.helpers.PlacementInfo;
 import com.yugabyte.yw.models.helpers.TaskType;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -62,7 +56,6 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnit;
@@ -80,117 +73,6 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
 
   private static final String OLD_VERSION = "2.15.0.0-b1";
   private static final String NEW_VERSION = "2.17.0.0-b1";
-
-  private static final List<TaskType> ROLLING_UPGRADE_TASK_SEQUENCE_MASTER =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.CheckNodesAreSafeToTakeDown,
-          TaskType.RunHooks,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleConfigureServers,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.WaitForServer,
-          TaskType.WaitForServerReady,
-          TaskType.WaitForEncryptionKeyInMemory,
-          TaskType.CheckFollowerLag,
-          TaskType.RunHooks,
-          TaskType.SetNodeState,
-          TaskType.WaitStartingFromTime);
-
-  private static final List<TaskType> ROLLING_UPGRADE_TASK_SEQUENCE_MASTER_WITH_YBC_INSTALL =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.CheckNodesAreSafeToTakeDown,
-          TaskType.RunHooks,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleSetupServer,
-          TaskType.AnsibleConfigureServers,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.WaitForServer,
-          TaskType.WaitForServerReady,
-          TaskType.WaitForEncryptionKeyInMemory,
-          TaskType.CheckFollowerLag,
-          TaskType.RunHooks,
-          TaskType.SetNodeState,
-          TaskType.WaitStartingFromTime);
-
-  private static final List<TaskType> ROLLING_UPGRADE_TASK_SEQUENCE_TSERVER =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.CheckUnderReplicatedTablets,
-          TaskType.CheckNodesAreSafeToTakeDown,
-          TaskType.RunHooks,
-          TaskType.ModifyBlackList,
-          TaskType.WaitForLeaderBlacklistCompletion,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleConfigureServers,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.WaitForServer,
-          TaskType.WaitForServerReady,
-          TaskType.WaitForEncryptionKeyInMemory,
-          TaskType.ModifyBlackList,
-          TaskType.CheckFollowerLag,
-          TaskType.RunHooks,
-          TaskType.SetNodeState,
-          TaskType.WaitStartingFromTime);
-
-  private static final List<TaskType> ROLLING_UPGRADE_TASK_SEQUENCE_TSERVER_WITH_YBC_INSTALL =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.CheckUnderReplicatedTablets,
-          TaskType.CheckNodesAreSafeToTakeDown,
-          TaskType.RunHooks,
-          TaskType.ModifyBlackList,
-          TaskType.WaitForLeaderBlacklistCompletion,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleSetupServer,
-          TaskType.AnsibleConfigureServers,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.WaitForServer,
-          TaskType.WaitForServerReady,
-          TaskType.WaitForEncryptionKeyInMemory,
-          TaskType.ModifyBlackList,
-          TaskType.CheckFollowerLag,
-          TaskType.RunHooks,
-          TaskType.SetNodeState,
-          TaskType.WaitStartingFromTime);
-
-  private static final List<TaskType> ROLLING_UPGRADE_TASK_SEQUENCE_INACTIVE_ROLE =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.RunHooks,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleConfigureServers,
-          TaskType.RunHooks,
-          TaskType.SetNodeState,
-          TaskType.WaitStartingFromTime);
-
-  private static final List<TaskType> ROLLING_UPGRADE_TASK_SEQUENCE_INACTIVE_ROLE_WITH_YBC_INSTALL =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.RunHooks,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleSetupServer,
-          TaskType.AnsibleConfigureServers,
-          TaskType.RunHooks,
-          TaskType.SetNodeState,
-          TaskType.WaitStartingFromTime);
-
-  private static final List<TaskType> NON_ROLLING_UPGRADE_TASK_SEQUENCE_ACTIVE_ROLE =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleConfigureServers,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.WaitForServer,
-          TaskType.SetNodeState);
-
-  private static final List<TaskType> NON_ROLLING_UPGRADE_TASK_SEQUENCE_INACTIVE_ROLE =
-      ImmutableList.of(
-          TaskType.SetNodeState,
-          TaskType.AnsibleClusterServerCtl,
-          TaskType.AnsibleConfigureServers,
-          TaskType.SetNodeState);
 
   @Override
   @Before
@@ -263,160 +145,6 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
     return submitTask(requestParams, TaskType.SoftwareUpgrade, commissioner, expectedVersion);
   }
 
-  private int assertCommonTasks(
-      Map<Integer, List<TaskInfo>> subTasksByPosition,
-      int startPosition,
-      UpgradeType type,
-      boolean isFinalStep,
-      boolean systemCatalogUpgrade) {
-    return assertCommonTasks(
-        subTasksByPosition, startPosition, type, isFinalStep, systemCatalogUpgrade, false);
-  }
-
-  private int assertCommonTasks(
-      Map<Integer, List<TaskInfo>> subTasksByPosition,
-      int startPosition,
-      UpgradeType type,
-      boolean isFinalStep,
-      boolean systemCatalogUpgrade,
-      boolean installYbc) {
-    int position = startPosition;
-    List<TaskType> commonNodeTasks = new ArrayList<>();
-
-    if (type.name().equals("ROLLING_UPGRADE_TSERVER_ONLY") && !isFinalStep) {
-      commonNodeTasks.add(TaskType.ModifyBlackList);
-    }
-
-    if (installYbc) {
-      commonNodeTasks.add(TaskType.AnsibleConfigureServers);
-      commonNodeTasks.add(TaskType.WaitForYbcServer);
-      commonNodeTasks.add(TaskType.UpdateUniverseYbcDetails);
-    }
-
-    if (isFinalStep) {
-      commonNodeTasks.addAll(
-          ImmutableList.of(TaskType.CheckSoftwareVersion, TaskType.PromoteAutoFlags));
-      if (systemCatalogUpgrade) {
-        commonNodeTasks.add(TaskType.RunYsqlUpgrade);
-      }
-      commonNodeTasks.addAll(
-          ImmutableList.of(
-              TaskType.UpdateSoftwareVersion,
-              TaskType.UpdateUniverseState,
-              TaskType.RunHooks,
-              TaskType.UniverseUpdateSucceeded));
-    }
-    for (TaskType commonNodeTask : commonNodeTasks) {
-      assertTaskType(subTasksByPosition.get(position), commonNodeTask);
-      position++;
-    }
-    return position;
-  }
-
-  private int assertSequence(
-      Map<Integer, List<TaskInfo>> subTasksByPosition,
-      ServerType serverType,
-      int startPosition,
-      boolean isRollingUpgrade,
-      boolean activeRole) {
-    return assertSequence(
-        subTasksByPosition, serverType, startPosition, isRollingUpgrade, activeRole, false);
-  }
-
-  private int assertSequence(
-      Map<Integer, List<TaskInfo>> subTasksByPosition,
-      ServerType serverType,
-      int startPosition,
-      boolean isRollingUpgrade,
-      boolean activeRole,
-      boolean installYbc) {
-    int position = startPosition;
-    if (isRollingUpgrade) {
-      List<TaskType> taskSequence =
-          serverType == MASTER
-              ? (activeRole
-                  ? (installYbc
-                      ? ROLLING_UPGRADE_TASK_SEQUENCE_MASTER_WITH_YBC_INSTALL
-                      : ROLLING_UPGRADE_TASK_SEQUENCE_MASTER)
-                  : (installYbc
-                      ? ROLLING_UPGRADE_TASK_SEQUENCE_INACTIVE_ROLE_WITH_YBC_INSTALL
-                      : ROLLING_UPGRADE_TASK_SEQUENCE_INACTIVE_ROLE))
-              : (installYbc
-                  ? ROLLING_UPGRADE_TASK_SEQUENCE_TSERVER_WITH_YBC_INSTALL
-                  : ROLLING_UPGRADE_TASK_SEQUENCE_TSERVER);
-      List<Integer> nodeOrder = getRollingUpgradeNodeOrder(serverType, activeRole);
-
-      for (int nodeIdx : nodeOrder) {
-        String nodeName = String.format("host-n%d", nodeIdx);
-        for (TaskType type : taskSequence) {
-          List<TaskInfo> tasks = subTasksByPosition.get(position);
-          TaskType taskType = tasks.get(0).getTaskType();
-          UserTaskDetails.SubTaskGroupType subTaskGroupType = tasks.get(0).getSubTaskGroupType();
-          // Leader blacklisting adds a ModifyBlackList task at position 0
-          int numTasksToAssert = position == 0 ? 2 : 1;
-          assertEquals(numTasksToAssert, tasks.size());
-          assertEquals(type, taskType);
-          if (!NON_NODE_TASKS.contains(taskType)) {
-            Map<String, Object> assertValues =
-                new HashMap<>(ImmutableMap.of("nodeName", nodeName, "nodeCount", 1));
-
-            if (taskType.equals(TaskType.AnsibleConfigureServers)) {
-              String version = NEW_VERSION;
-              String taskSubType =
-                  subTaskGroupType.equals(DownloadingSoftware) ? "Download" : "Install";
-              assertValues.putAll(
-                  ImmutableMap.of(
-                      "ybSoftwareVersion", version,
-                      "processType", serverType.toString(),
-                      "taskSubType", taskSubType));
-            }
-            assertNodeSubTask(tasks, assertValues);
-          }
-          position++;
-        }
-      }
-    } else {
-      List<TaskType> taskSequence =
-          activeRole
-              ? NON_ROLLING_UPGRADE_TASK_SEQUENCE_ACTIVE_ROLE
-              : NON_ROLLING_UPGRADE_TASK_SEQUENCE_INACTIVE_ROLE;
-      for (TaskType type : taskSequence) {
-        List<TaskInfo> tasks = subTasksByPosition.get(position);
-        TaskType taskType = assertTaskType(tasks, type);
-
-        if (NON_NODE_TASKS.contains(taskType)) {
-          assertEquals(1, tasks.size());
-        } else {
-          List<String> nodes = null;
-          // We have 3 nodes as active masters, 2 as inactive masters and 5 tasks/nodes
-          // for Tserver.
-          if (serverType == MASTER) {
-            if (activeRole) {
-              nodes = ImmutableList.of("host-n1", "host-n2", "host-n3");
-            } else {
-              nodes = ImmutableList.of("host-n4", "host-n5");
-            }
-          } else {
-            nodes = ImmutableList.of("host-n1", "host-n2", "host-n3", "host-n4", "host-n5");
-          }
-
-          Map<String, Object> assertValues =
-              new HashMap<>(ImmutableMap.of("nodeNames", nodes, "nodeCount", nodes.size()));
-          if (taskType.equals(TaskType.AnsibleConfigureServers)) {
-            String version = NEW_VERSION;
-            assertValues.putAll(
-                ImmutableMap.of(
-                    "ybSoftwareVersion", version, "processType", serverType.toString()));
-          }
-          assertEquals(nodes.size(), tasks.size());
-          assertNodeSubTask(tasks, assertValues);
-        }
-        position++;
-      }
-    }
-    return position;
-  }
-
   @Test
   public void testSoftwareUpgradeWithSameVersion() {
     SoftwareUpgradeParams taskParams = new SoftwareUpgradeParams();
@@ -451,40 +179,37 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
         taskParams.ybSoftwareVersion,
         defaultUniverse.getMasters().size() + defaultUniverse.getTServers().size());
     TaskInfo taskInfo = submitTask(taskParams, defaultUniverse.getVersion());
-    verify(mockNodeManager, times(71)).nodeCommand(any(), any());
     verify(mockNodeUniverseManager, times(10)).runCommand(any(), any(), anyList(), any());
 
-    List<TaskInfo> subTasks = taskInfo.getSubTasks();
-    Map<Integer, List<TaskInfo>> subTasksByPosition =
-        subTasks.stream().collect(Collectors.groupingBy(TaskInfo::getPosition));
-
-    int position = 0;
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckNodesAreSafeToTakeDown);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckUpgrade);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckMemory);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckLocale);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckGlibc);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.FreezeUniverse);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.RunHooks);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.UpdateUniverseState);
-    // XCluster gflag set up.
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.XClusterInfoPersist);
-
-    List<TaskInfo> downloadTasks = subTasksByPosition.get(position++);
-    assertTaskType(downloadTasks, TaskType.AnsibleConfigureServers);
-    assertEquals(5, downloadTasks.size());
-    position = assertSequence(subTasksByPosition, MASTER, position, true, false);
-    position = assertSequence(subTasksByPosition, MASTER, position, true, true);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.ModifyBlackList);
-    position =
-        assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, false, true);
-    position = assertSequence(subTasksByPosition, TSERVER, position, true, true);
-    assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, true, true);
-    assertEquals(151, position);
     assertEquals(100.0, taskInfo.getPercentCompleted(), 0);
     assertEquals(Success, taskInfo.getTaskState());
+
+    MockUpgrade mockUpgrade = initMockUpgrade();
+    mockUpgrade
+        .precheckTasks(getPrecheckTasks(true))
+        .addTasks(TaskType.UpdateUniverseState)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, defaultUniverse.getMasters().size())
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.XClusterInfoPersist)
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .upgradeRound(UpgradeOption.ROLLING_UPGRADE)
+        .withContext(
+            UpgradeTaskBase.UpgradeContext.builder()
+                .reconfigureMaster(false)
+                .runBeforeStopping(false)
+                .processInactiveMaster(true)
+                .targetSoftwareVersion(NEW_VERSION)
+                .build())
+        .task(TaskType.AnsibleConfigureServers)
+        .applyRound()
+        .addSimultaneousTasks(TaskType.CheckSoftwareVersion, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.PromoteAutoFlags)
+        .addTasks(TaskType.RunYsqlUpgrade)
+        .addTasks(TaskType.UpdateSoftwareVersion)
+        .addTasks(TaskType.UpdateUniverseState)
+        .verifyTasks(taskInfo.getSubTasks());
   }
 
   @Test
@@ -503,40 +228,43 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
         taskParams.ybSoftwareVersion,
         defaultUniverse.getMasters().size() + defaultUniverse.getTServers().size());
     TaskInfo taskInfo = submitTask(taskParams, defaultUniverse.getVersion());
-    verify(mockNodeManager, times(86)).nodeCommand(any(), any());
     verify(mockNodeUniverseManager, times(10)).runCommand(any(), any(), anyList(), any());
 
-    List<TaskInfo> subTasks = taskInfo.getSubTasks();
-    Map<Integer, List<TaskInfo>> subTasksByPosition =
-        subTasks.stream().collect(Collectors.groupingBy(TaskInfo::getPosition));
-
-    int position = 0;
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckNodesAreSafeToTakeDown);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckUpgrade);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckMemory);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckLocale);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckGlibc);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.FreezeUniverse);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.RunHooks);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.UpdateUniverseState);
-    // XCluster gflag set up.
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.XClusterInfoPersist);
-
-    List<TaskInfo> downloadTasks = subTasksByPosition.get(position++);
-    assertTaskType(downloadTasks, TaskType.AnsibleConfigureServers);
-    assertEquals(5, downloadTasks.size());
-    position = assertSequence(subTasksByPosition, MASTER, position, true, false, true);
-    position = assertSequence(subTasksByPosition, MASTER, position, true, true, true);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.ModifyBlackList);
-    position =
-        assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, false, true);
-    position = assertSequence(subTasksByPosition, TSERVER, position, true, true, true);
-    assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, true, true, true);
-    assertEquals(161, position);
     assertEquals(100.0, taskInfo.getPercentCompleted(), 0);
     assertEquals(Success, taskInfo.getTaskState());
+
+    MockUpgrade mockUpgrade = initMockUpgrade();
+    mockUpgrade
+        .precheckTasks(getPrecheckTasks(true))
+        .addTasks(TaskType.UpdateUniverseState)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, defaultUniverse.getMasters().size())
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.XClusterInfoPersist)
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .upgradeRound(UpgradeOption.ROLLING_UPGRADE)
+        .withContext(
+            UpgradeTaskBase.UpgradeContext.builder()
+                .reconfigureMaster(false)
+                .runBeforeStopping(false)
+                .processInactiveMaster(true)
+                .targetSoftwareVersion(NEW_VERSION)
+                .build())
+        .task(TaskType.AnsibleSetupServer)
+        .task(TaskType.AnsibleConfigureServers)
+        .applyRound()
+        // Install ybc
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.WaitForYbcServer)
+        .addTasks(TaskType.UpdateUniverseYbcDetails)
+        .addSimultaneousTasks(TaskType.CheckSoftwareVersion, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.PromoteAutoFlags)
+        .addTasks(TaskType.RunYsqlUpgrade)
+        .addTasks(TaskType.UpdateSoftwareVersion)
+        .addTasks(TaskType.UpdateUniverseState)
+        .verifyTasks(taskInfo.getSubTasks());
   }
 
   @Test
@@ -583,39 +311,36 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
         taskParams.ybSoftwareVersion,
         defaultUniverse.getMasters().size() + defaultUniverse.getTServers().size());
     TaskInfo taskInfo = submitTask(taskParams, defaultUniverse.getVersion());
-    verify(mockNodeManager, times(71)).nodeCommand(any(), any());
     verify(mockNodeUniverseManager, times(10)).runCommand(any(), any(), anyList(), any());
 
-    List<TaskInfo> subTasks = taskInfo.getSubTasks();
-    Map<Integer, List<TaskInfo>> subTasksByPosition =
-        subTasks.stream().collect(Collectors.groupingBy(TaskInfo::getPosition));
-
-    int position = 0;
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckNodesAreSafeToTakeDown);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckUpgrade);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckMemory);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckLocale);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckGlibc);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.FreezeUniverse);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.RunHooks);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.UpdateUniverseState);
-    // XCluster gflag set up.
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.XClusterInfoPersist);
-
-    List<TaskInfo> downloadTasks = subTasksByPosition.get(position++);
-    assertTaskType(downloadTasks, TaskType.AnsibleConfigureServers);
-    assertEquals(5, downloadTasks.size());
-    position = assertSequence(subTasksByPosition, MASTER, position, true, false);
-    position = assertSequence(subTasksByPosition, MASTER, position, true, true);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.ModifyBlackList);
-    position =
-        assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, false, false);
-    position = assertSequence(subTasksByPosition, TSERVER, position, true, true);
-    assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, true, false);
     assertEquals(100.0, taskInfo.getPercentCompleted(), 0);
     assertEquals(Success, taskInfo.getTaskState());
+
+    MockUpgrade mockUpgrade = initMockUpgrade();
+    mockUpgrade
+        .precheckTasks(getPrecheckTasks(true))
+        .addTasks(TaskType.UpdateUniverseState)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, defaultUniverse.getMasters().size())
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.XClusterInfoPersist)
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .upgradeRound(UpgradeOption.ROLLING_UPGRADE)
+        .withContext(
+            UpgradeTaskBase.UpgradeContext.builder()
+                .reconfigureMaster(false)
+                .runBeforeStopping(false)
+                .processInactiveMaster(true)
+                .targetSoftwareVersion(NEW_VERSION)
+                .build())
+        .task(TaskType.AnsibleConfigureServers)
+        .applyRound()
+        .addSimultaneousTasks(TaskType.CheckSoftwareVersion, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.PromoteAutoFlags)
+        .addTasks(TaskType.UpdateSoftwareVersion)
+        .addTasks(TaskType.UpdateUniverseState)
+        .verifyTasks(taskInfo.getSubTasks());
   }
 
   @Test
@@ -657,40 +382,37 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
         taskParams.ybSoftwareVersion,
         defaultUniverse.getMasters().size() + defaultUniverse.getTServers().size());
     TaskInfo taskInfo = submitTask(taskParams, defaultUniverse.getVersion());
-    verify(mockNodeManager, times(95)).nodeCommand(any(), any());
     verify(mockNodeUniverseManager, times(16)).runCommand(any(), any(), anyList(), any());
 
-    List<TaskInfo> subTasks = taskInfo.getSubTasks();
-    Map<Integer, List<TaskInfo>> subTasksByPosition =
-        subTasks.stream().collect(Collectors.groupingBy(TaskInfo::getPosition));
-
-    int position = 0;
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckNodesAreSafeToTakeDown);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckUpgrade);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckMemory);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckLocale);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckGlibc);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.FreezeUniverse);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.RunHooks);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.UpdateUniverseState);
-    // XCluster gflag set up.
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.XClusterInfoPersist);
-
-    List<TaskInfo> downloadTasks = subTasksByPosition.get(position++);
-    assertTaskType(downloadTasks, TaskType.AnsibleConfigureServers);
-    assertEquals(8, downloadTasks.size());
-    position = assertSequence(subTasksByPosition, MASTER, position, true, false);
-    position = assertSequence(subTasksByPosition, MASTER, position, true, true);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.ModifyBlackList);
-    position =
-        assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, false, true);
-    position = assertSequence(subTasksByPosition, TSERVER, position, true, true);
-    assertCommonTasks(subTasksByPosition, position, UpgradeType.ROLLING_UPGRADE, true, true);
-    assertEquals(202, position);
     assertEquals(100.0, taskInfo.getPercentCompleted(), 0);
     assertEquals(Success, taskInfo.getTaskState());
+
+    MockUpgrade mockUpgrade = initMockUpgrade();
+    mockUpgrade
+        .precheckTasks(getPrecheckTasks(true))
+        .addTasks(TaskType.UpdateUniverseState)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, defaultUniverse.getMasters().size())
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServersInPrimaryCluster().size())
+        .addTasks(TaskType.XClusterInfoPersist)
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .upgradeRound(UpgradeOption.ROLLING_UPGRADE)
+        .withContext(
+            UpgradeTaskBase.UpgradeContext.builder()
+                .reconfigureMaster(false)
+                .runBeforeStopping(false)
+                .processInactiveMaster(true)
+                .targetSoftwareVersion(NEW_VERSION)
+                .build())
+        .task(TaskType.AnsibleConfigureServers)
+        .applyRound()
+        .addSimultaneousTasks(TaskType.CheckSoftwareVersion, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.PromoteAutoFlags)
+        .addTasks(TaskType.RunYsqlUpgrade)
+        .addTasks(TaskType.UpdateSoftwareVersion)
+        .addTasks(TaskType.UpdateUniverseState)
+        .verifyTasks(taskInfo.getSubTasks());
   }
 
   @Test
@@ -708,50 +430,37 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
         defaultUniverse.getMasters().size() + defaultUniverse.getTServers().size());
 
     TaskInfo taskInfo = submitTask(taskParams, defaultUniverse.getVersion());
-    ArgumentCaptor<NodeTaskParams> commandParams = ArgumentCaptor.forClass(NodeTaskParams.class);
-    verify(mockNodeManager, times(51)).nodeCommand(any(), commandParams.capture());
     verify(mockNodeUniverseManager, times(10)).runCommand(any(), any(), anyList(), any());
 
-    List<TaskInfo> subTasks = taskInfo.getSubTasks();
-    Map<Integer, List<TaskInfo>> subTasksByPosition =
-        subTasks.stream().collect(Collectors.groupingBy(TaskInfo::getPosition));
-    int position = 0;
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckUpgrade);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckMemory);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckLocale);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.CheckGlibc);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.FreezeUniverse);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.RunHooks);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.UpdateUniverseState);
-    // XCluster gflag set up.
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.AnsibleConfigureServers);
-    assertTaskType(subTasksByPosition.get(position++), TaskType.XClusterInfoPersist);
-
-    List<TaskInfo> downloadTasks = subTasksByPosition.get(position++);
-    assertTaskType(downloadTasks, TaskType.AnsibleConfigureServers);
-    assertEquals(5, downloadTasks.size());
-    position = assertSequence(subTasksByPosition, MASTER, position, false, false);
-    position = assertSequence(subTasksByPosition, MASTER, position, false, true);
-    position = assertSequence(subTasksByPosition, TSERVER, position, false, true);
-    assertCommonTasks(subTasksByPosition, position, UpgradeType.FULL_UPGRADE, true, true);
-    assertEquals(27, position);
     assertEquals(100.0, taskInfo.getPercentCompleted(), 0);
     assertEquals(Success, taskInfo.getTaskState());
-  }
 
-  protected List<Integer> getRollingUpgradeNodeOrder(ServerType serverType, boolean activeRole) {
-    return serverType == MASTER
-        ?
-        // We need to check that the master leader is upgraded last.
-        (activeRole ? Arrays.asList(1, 3, 2) : Arrays.asList(4, 5))
-        :
-        // We need to check that isAffinitized zone node is upgraded getFirst().
-        defaultUniverse.getUniverseDetails().getReadOnlyClusters().isEmpty()
-            ? Arrays.asList(3, 1, 2, 4, 5)
-            :
-            // Primary cluster getFirst(), then read replica.
-            Arrays.asList(3, 1, 2, 4, 5, 8, 6, 7);
+    MockUpgrade mockUpgrade = initMockUpgrade();
+    mockUpgrade
+        .precheckTasks(getPrecheckTasks(false))
+        .addTasks(TaskType.UpdateUniverseState)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, defaultUniverse.getMasters().size())
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.XClusterInfoPersist)
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .upgradeRound(UpgradeOption.NON_ROLLING_UPGRADE)
+        .withContext(
+            UpgradeTaskBase.UpgradeContext.builder()
+                .reconfigureMaster(false)
+                .runBeforeStopping(false)
+                .processInactiveMaster(true)
+                .targetSoftwareVersion(NEW_VERSION)
+                .build())
+        .task(TaskType.AnsibleConfigureServers)
+        .applyRound()
+        .addSimultaneousTasks(TaskType.CheckSoftwareVersion, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.PromoteAutoFlags)
+        .addTasks(TaskType.RunYsqlUpgrade)
+        .addTasks(TaskType.UpdateSoftwareVersion)
+        .addTasks(TaskType.UpdateUniverseState)
+        .verifyTasks(taskInfo.getSubTasks());
   }
 
   @Test
@@ -797,9 +506,7 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
     tserversOriginallyUpdated.add(bothUpdated.cloudInfo.private_ip);
 
     List<NodeDetails> otherTservers =
-        defaultUniverse.getTServers().stream()
-            .filter(n -> !masters.contains(n))
-            .collect(Collectors.toList());
+        defaultUniverse.getTServers().stream().filter(n -> !masters.contains(n)).toList();
 
     NodeDetails tserverUpdated = otherTservers.get(0);
     tserversOriginallyUpdated.add(tserverUpdated.cloudInfo.private_ip);
@@ -829,7 +536,6 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
               Set<String> serversUpdated = isMaster ? mastersUpdated : tserversUpdated;
               Optional<String> result =
                   serversUpdated.add(ip) ? Optional.of(OLD_VERSION) : Optional.of(NEW_VERSION);
-              NodeDetails node = defaultUniverse.getNodeByPrivateIP(ip);
               return result;
             });
 
@@ -870,12 +576,12 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
             .map(t -> t.getTaskParams().get("nodeName").asText())
             .collect(Collectors.toSet());
 
-    Set<String> expectedMasters =
+    Set<String> masterNames =
         defaultUniverse.getMasters().stream()
             .filter(n -> !mastersOriginallyUpdated.contains(n.cloudInfo.private_ip))
             .map(n -> n.nodeName)
             .collect(Collectors.toSet());
-    Set<String> expectedTservers =
+    Set<String> tserverNames =
         defaultUniverse.getTServers().stream()
             .filter(
                 n ->
@@ -884,10 +590,57 @@ public class SoftwareUpgradeTest extends UpgradeTaskTest {
             .map(n -> n.nodeName)
             .collect(Collectors.toSet());
 
+    Set<String> expectedMasters = new HashSet<>(masterNames);
     // We do process inactive masters, so for each tserver we also process masters
-    expectedMasters.addAll(expectedTservers);
+    expectedMasters.addAll(tserverNames);
 
     assertEquals("Upgraded masters", expectedMasters, configuredMasters);
-    assertEquals("Upgraded tservers", expectedTservers, configuredTservers);
+    assertEquals("Upgraded tservers", tserverNames, configuredTservers);
+
+    MockUpgrade mockUpgrade = initMockUpgrade();
+    mockUpgrade
+        .precheckTasks(
+            TaskType.CheckUpgrade, TaskType.CheckMemory, TaskType.CheckLocale, TaskType.CheckGlibc)
+        .addTasks(TaskType.UpdateUniverseState)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, defaultUniverse.getMasters().size())
+        .addSimultaneousTasks(
+            TaskType.AnsibleConfigureServers, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.XClusterInfoPersist)
+        .addSimultaneousTasks(TaskType.AnsibleConfigureServers, tserverNames.size())
+        .upgradeRound(UpgradeTaskParams.UpgradeOption.ROLLING_UPGRADE)
+        .withContext(
+            UpgradeTaskBase.UpgradeContext.builder()
+                .reconfigureMaster(false)
+                .runBeforeStopping(false)
+                .processInactiveMaster(true)
+                .targetSoftwareVersion(NEW_VERSION)
+                .build())
+        .task(TaskType.AnsibleConfigureServers)
+        .applyToNodes(masterNames, tserverNames)
+        .addSimultaneousTasks(TaskType.CheckSoftwareVersion, defaultUniverse.getTServers().size())
+        .addTasks(TaskType.PromoteAutoFlags)
+        .addTasks(TaskType.RunYsqlUpgrade)
+        .addTasks(TaskType.UpdateSoftwareVersion)
+        .addTasks(TaskType.UpdateUniverseState)
+        .verifyTasks(taskInfo.getSubTasks());
+  }
+
+  private MockUpgrade initMockUpgrade() {
+    return initMockUpgrade(SoftwareUpgrade.class);
+  }
+
+  @Override
+  protected TaskType[] getPrecheckTasks(boolean hasRollingRestarts) {
+    List<TaskType> lst =
+        new ArrayList<>(
+            Arrays.asList(
+                TaskType.CheckUpgrade,
+                TaskType.CheckMemory,
+                TaskType.CheckLocale,
+                TaskType.CheckGlibc));
+    if (hasRollingRestarts) {
+      lst.add(0, TaskType.CheckNodesAreSafeToTakeDown);
+    }
+    return lst.toArray(new TaskType[0]);
   }
 }
